--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 id="titulo">GALERIA</h1>
         <div class="slider">
             <div class="slides">
-                <div class="slide"><img src="Edesign/elefante.png" alt="Imagen 1"></div>
+                <div class="slide"><img src="elefante.png" alt="Imagen 1"></div>
                 <div class="slide"><img src="Edesign/pintura violeta.png" alt="Imagen 2"></div>
                 <div class="slide"><img src="Edesign/Eespalda.png" alt="Imagen 3"></div>
             </div>
