--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="slider">
             <div class="slides">
                 <div class="slide"><img src="elefante.png" alt="Imagen 1"></div>
-                <div class="slide"><img src="Edesign/pintura violeta.png" alt="Imagen 2"></div>
-                <div class="slide"><img src="Edesign/Eespalda.png" alt="Imagen 3"></div>
+                <div class="slide"><img src="pintura violeta.png" alt="Imagen 2"></div>
+                <div class="slide"><img src="Eespalda.png" alt="Imagen 3"></div>
             </div>
             <button class="btn-prev">&#10094;</button>
             <button class="btn-next">&#10095;</button>
@@ -37,7 +37,7 @@
             
             <div class="card">
                 <div class="front">
-                    <img src="Edesign/Expandir.png" alt="Expandir" height="auto" width="300px">
+                    <img src="Expandir.png" alt="Expandir" height="auto" width="300px">
                 </div>
                 <div class="back">
                     <h1>Expandir</h1>
@@ -46,7 +46,7 @@
             </div>
             <div class="card">
                 <div class="front">
-                    <img src="Edesign/Implementar.png" alt="Implementar" height="auto" width="300px">
+                    <img src="Implementar.png" alt="Implementar" height="auto" width="300px">
                 </div>
                 <div class="back">
                     <h1>Implementar</h1>
@@ -55,7 +55,7 @@
             </div>
             <div class="card">
                 <div class="front">
-                    <img src="Edesign/Networking.png" alt="Networking" height="auto" width="300px">
+                    <img src="Networking.png" alt="Networking" height="auto" width="300px">
                 </div>
                 <div class="back">
                     <h1>Networking</h1>
@@ -69,8 +69,8 @@
     <h1 id="titulo">INFORMACION</h1>
     <section id="informacion">
         
-        <div><img src="Edesign/Logo.png" alt=""></div>
-        <div><a href="https://www.instagram.com/ernests_designs/"><img src="Edesign/QR.png" alt=""></a></div>
+        <div><img src="Logo.png" alt=""></div>
+        <div><a href="https://www.instagram.com/ernests_designs/"><img src="QR.png" alt=""></a></div>
         <div id="donaciones">
             <h2>Donaciones</h2>
             <div>
