--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="menu">
         <div class="container">
             <nav class="menubar">
+                <a href="https://galeriapython-production.up.railway.app/" target="_blank">Galeria Virtual</a>
                 <a href="#presentacion">Presentacion </a>
                 <a href="#galeria">Galeria </a> 
                 <a href="#objetivos">Objetivos </a>
