--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <header class="menu">
         <div class="container">
             <nav class="menubar">
-                <a href="https://galeriapython-production.up.railway.app/" target="_blank">Galeria Virtual</a>
+                <a href="https://galeriapython-production.up.railway.app/">Galeria Virtual</a>
                 <a href="#presentacion">Presentacion </a>
-                <a href="#galeria">Galeria </a> 
                 <a href="#objetivos">Objetivos </a>
                 <a href="#informacion">Informacion </a> 
             </nav>
