Update index.html rutas de imagenes

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="row g-4">
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/avatar.png" class="card-img-top" alt="Expand">
+                    <img src="img/avatar.png" class="card-img-top" alt="Expand">
                     <div class="card-body">
                         <h5 class="card-title">Expandir</h5>
                         <p class="card-text">Como negocio realzar el talento boricua.</p>
@@ -184,7 +184,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/networking.png" class="card-img-top" alt="Innovate">
+                    <img src="img/networking.png" class="card-img-top" alt="Innovate">
                     <div class="card-body">
                         <h5 class="card-title">Innovar</h5>
                         <p class="card-text">Crear nuevas formas de impartir el arte.</p>
@@ -193,7 +193,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/ambientacion.png" class="card-img-top" alt="Connect">
+                    <img src="img/ambientacion.png" class="card-img-top" alt="Connect">
                     <div class="card-body">
                         <h5 class="card-title">Ambientación</h5>
                         <p class="card-text">Enseñar a los jóvenes que el arte también es una herramienta para personalizar y ambientar su espacio de acuerdo con sus gustos y colores.</p>
