Update index.html imagenes

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="img/networking.png" class="card-img-top" alt="Innovate">
+                    <img src="img/Networking.png" class="card-img-top" alt="Innovate">
                     <div class="card-body">
                         <h5 class="card-title">Innovar</h5>
                         <p class="card-text">Crear nuevas formas de impartir el arte.</p>
