--- a/index.html
+++ b/index.html
@@ -175,28 +175,28 @@
         <div class="row g-4">
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/avatar.png" class="card-img-top" alt="Expand">
+                    <img src="/img/E1.jpeg" class="card-img-top" alt="Expand">
                     <div class="card-body">
-                        <h5 class="card-title">Expandir</h5>
-                        <p class="card-text">Como negocio realzar el talento boricua.</p>
+                        <h5 class="card-title">Armonización</h5>
+                        <p class="card-text">Unir a las familias a través del arte y los colores brillantes.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/networking.png" class="card-img-top" alt="Innovate">
+                    <img src="/img/E2.jpeg" class="card-img-top" alt="Innovate">
                     <div class="card-body">
-                        <h5 class="card-title">Innovar</h5>
-                        <p class="card-text">Crear nuevas formas de impartir el arte.</p>
+                        <h5 class="card-title">Expresar emociones</h5>
+                        <p class="card-text">Crear emociones a través de los colores y su representación simbólica del elefante en las personas.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card">
-                    <img src="/img/ambientacion.png" class="card-img-top" alt="Connect">
+                    <img src="/img/E3.jpeg" class="card-img-top" alt="Connect">
                     <div class="card-body">
-                        <h5 class="card-title">Ambientación</h5>
-                        <p class="card-text">Enseñar a los jóvenes que el arte también es una herramienta para personalizar y ambientar su espacio de acuerdo con sus gustos y colores.</p>
+                        <h5 class="card-title">Puertorriqueñización</h5>
+                        <p class="card-text">Expandir la cultura puertorriqueña a otros países del mundo.</p>
                     </div>
                 </div>
             </div>
@@ -236,7 +236,6 @@
         <div class="social-icons">
             <a href="https://www.instagram.com/ernests_designs/" target="_blank"><i class="bi bi-instagram"></i> Instagram</a>
             <a href="https://www.tiktok.com/@ernestsdesigns?_t=8sPOMOw9QWg&_r=1" target="_blank"><i class="bi bi-tiktok"></i> TikTok</a>
-            <a href="#" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a>
         </div>
     </footer>
 
