--- a/index.html
+++ b/index.html
@@ -169,42 +169,42 @@
         <a href="#" class="btn btn-primary btn-lg mt-4">Shopify</a>
     </header>
 
-    <!-- Objectives Section -->
-    <section id="objectives" class="container">
-        <h2 class="text-center mb-5 slide-in">Objetivos</h2>
-        <div class="row g-4">
-            <div class="col-lg-4 col-md-6">
-                <div class="card">
-
-                    <img src="\img\E1.jpeg" class="card-img-top" alt="Expand">
-                    <div class="card-body">
-                        <h5 class="card-title">Armonización</h5>
-                        <p class="card-text">Unir a las familias a través del arte y los colores brillantes.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card">
-
-                    <img src="\img\E2.jpeg" class="card-img-top" alt="Innovate">
-                    <div class="card-body">
-                        <h5 class="card-title">Expresar emociones</h5>
-                        <p class="card-text">Crear emociones a través de los colores y su representación simbólica del elefante en las personas.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card">
-
-                    <img src="\img\E3.jpeg" class="card-img-top" alt="Connect">
-                    <div class="card-body">
-                        <h5 class="card-title">Puertorriqueñización</h5>
-                        <p class="card-text">Expandir la cultura puertorriqueña a otros países del mundo.</p>
-                    </div>
+  <!-- Objectives Section -->
+<section id="objectives" class="container">
+    <h2 class="text-center mb-5 slide-in">Objetivos</h2>
+    <div class="row g-4">
+        <div class="col-lg-4 col-md-6">
+            <div class="card">
+                <!-- Corregir la ruta de la imagen -->
+                <img src="/img/E1.jpeg" class="card-img-top" alt="Expand">
+                <div class="card-body">
+                    <h5 class="card-title">Armonización</h5>
+                    <p class="card-text">Unir a las familias a través del arte y los colores brillantes.</p>
                 </div>
             </div>
         </div>
-    </section>
+        <div class="col-lg-4 col-md-6">
+            <div class="card">
+                <!-- Corregir la ruta de la imagen -->
+                <img src="/img/E2.jpeg" class="card-img-top" alt="Innovate">
+                <div class="card-body">
+                    <h5 class="card-title">Expresar emociones</h5>
+                    <p class="card-text">Crear emociones a través de los colores y su representación simbólica del elefante en las personas.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <div class="card">
+                <!-- Corregir la ruta de la imagen -->
+                <img src="/img/E3.jpeg" class="card-img-top" alt="Connect">
+                <div class="card-body">
+                    <h5 class="card-title">Puertorriqueñización</h5>
+                    <p class="card-text">Expandir la cultura puertorriqueña a otros países del mundo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="container">
