--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="col-lg-4 col-md-6">
             <div class="card">
                 <!-- Corregir la ruta de la imagen -->
-                <img src="/img/E1.jpeg" class="card-img-top" alt="Expand">
+                <img src="img/E1.jpeg" class="card-img-top" alt="Expand">
                 <div class="card-body">
                     <h5 class="card-title">Armonización</h5>
                     <p class="card-text">Unir a las familias a través del arte y los colores brillantes.</p>
@@ -186,7 +186,7 @@
         <div class="col-lg-4 col-md-6">
             <div class="card">
                 <!-- Corregir la ruta de la imagen -->
-                <img src="/img/E2.jpeg" class="card-img-top" alt="Innovate">
+                <img src="img/E2.jpeg" class="card-img-top" alt="Innovate">
                 <div class="card-body">
                     <h5 class="card-title">Expresar emociones</h5>
                     <p class="card-text">Crear emociones a través de los colores y su representación simbólica del elefante en las personas.</p>
@@ -196,7 +196,7 @@
         <div class="col-lg-4 col-md-6">
             <div class="card">
                 <!-- Corregir la ruta de la imagen -->
-                <img src="/img/E3.jpeg" class="card-img-top" alt="Connect">
+                <img src="img/E3.jpeg" class="card-img-top" alt="Connect">
                 <div class="card-body">
                     <h5 class="card-title">Puertorriqueñización</h5>
                     <p class="card-text">Expandir la cultura puertorriqueña a otros países del mundo.</p>
