Update to formspree

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <!-- Contact Section -->
     <section id="contact" class="container">
         <h2 class="text-center mb-5 slide-in">Formulario de Contacto</h2>
-        <form class="row g-3">
+        <form class="row g-3" action="https://formspree.io/f/xanqjpag">
             <div class="col-md-6">
                 <label for="name" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="name" placeholder="Tu nombre">
