--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
         <form class="row g-3" action="https://formspree.io/f/xanqjpag" method="POST">
             <div class="col-md-6">
                 <label for="name" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="name" placeholder="Tu nombre">
+                <input type="text" class="form-control" id="name" name="Nombre" placeholder="Tu nombre">
             </div>
             <div class="col-md-6">
                 <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico">
+                <input type="email" class="form-control" id="email" name="Email" placeholder="Tu correo electrónico">
             </div>
             <div class="col-md-6">
                 <label for="phone" class="form-label">Número de Teléfono</label>
-                <input type="tel" class="form-control" id="phone" placeholder="Tu número de teléfono">
+                <input type="tel" class="form-control" id="phone" name="Telefono" placeholder="Tu número de teléfono">
             </div>
             <div class="col-12">
                 <label for="message" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Escribe tu mensaje"></textarea>
+                <textarea class="form-control" id="message" name="Mensaje" rows="5" placeholder="Escribe tu mensaje"></textarea>
             </div>
             <div class="col-12 text-center">
-                <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+                <button type="submit" name="submit class="btn btn-primary btn-lg">Enviar</button>
             </div>
         </form>
     </section>
